--- a/Server/package.json
+++ b/Server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc",
+    "build": "rimraf dist && npx tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist",
     "start": "npx tsc && node ./dist/index.js",
     "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +19,11 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+],
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
@@ -33,6 +40,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "oracledb": "^6.3.0",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^5.0.5",
     "short-unique-id": "^5.0.3",
     "socket.io": "^4.7.4",
     "uuid": "^9.0.1"
