--- a/Server/package.json
+++ b/Server/package.json
@@ -7,7 +7,7 @@
     "build": "rimraf dist && npx tsc",
     "ts.check": "tsc --project tsconfig.json",
     "add-build": "git add dist",
-    "start": "npx tsc && node ./dist/index.js",
+    "start": "nodemon src/index.ts",
     "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
