--- a/Server/package.json
+++ b/Server/package.json
@@ -1,15 +1,14 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "nodemon src/index.ts",
     "build": "rimraf dist && tsc",
     "ts.check": "tsc --project tsconfig.json",
     "add-build": "git add dist",
     "test": "echo \"Error: no test specified\" && exit 1"
-    },
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -22,7 +21,7 @@
     "ts.check",
     "build",
     "add-build"
-],
+  ],
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
@@ -44,5 +43,6 @@
     "short-unique-id": "^5.0.3",
     "socket.io": "^4.7.4",
     "uuid": "^9.0.1"
-  }
+  },
+  "description": ""
 }
